Home screen and bottom navigation

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,7 +4,7 @@
     <!--Descriptions-->
     <string name="pm25_title">PM2.5 (Partículas en suspensión finas):</string>
     <string name="pm25_description"> Las partículas PM2.5 son pequeñas partículas sólidas o líquidas de 2.5 micrones o menos de diámetro. Estas partículas son lo suficientemente pequeñas como para penetrar profundamente en los pulmones y pueden tener efectos graves en la salud, especialmente para personas con problemas respiratorios.</string>
-    <string name="pm10_title">PM10 (Partículas en suspensión más grandes):</string>
+    <string name="pm10_title">PM10 (Partículas en suspensión):</string>
     <string name="pm10_description"> Similar a las PM2.5, pero con un tamaño de hasta 10 micrones. Aunque no son tan pequeñas como las PM2.5, también pueden causar problemas respiratorios al ser inhaladas.</string>
     <string name="ozone_title">O₃ (Ozono troposférico):</string>
     <string name="ozone_description"> El ozono troposférico es un contaminante formado cuando los óxidos de nitrógeno (NOₓ) y los compuestos orgánicos volátiles (COV) reaccionan en presencia de la luz solar. Puede causar problemas respiratorios y afectar la vegetación.</string>
@@ -20,18 +20,18 @@
     <string name="no_description"> Este gas incoloro e inodoro es un contaminante que se forma principalmente a partir de la combustión de combustibles fósiles. Aunque en pequeñas cantidades puede tener un papel en la regulación del flujo sanguíneo y la presión arterial, en concentraciones elevadas es tóxico y puede causar irritación en los ojos, la nariz y la garganta, así como problemas respiratorios. Además, el monóxido de nitrógeno puede reaccionar en la atmósfera para formar dióxido de nitrógeno (NO₂), un contaminante más dañino.</string>
     <string name="not_found_location">Ubicación no encontrada</string>
 
-    <string name="um003_title_with_unit">UM003 (partículas/cm³)</string>
-    <string name="pm1_title_with_unit" translatable="false">PM1 (µg/m³)</string>
-    <string name="pm10_title_with_unit" translatable="false">PM10 (µg/m³)</string>
-    <string name="relative_humidity_title_with_unit">Humedad relativa (%)</string>
-    <string name="temperature_with_unit">Temperatura (ºC)</string>
-    <string name="pm25_title_with_unit" translatable="false">PM25 (µg/m³)</string>
-    <string name="no2_title_with_unit">Dióxio de nitrógeno (µg/m³)</string>
-    <string name="nox_title_with_unit">Óxidos de nitrógeno (µg/m³)</string>
-    <string name="no_title_with_unit">Monóxido de nitrógeno (µg/m³)</string>
-    <string name="o3_title_with_unit">Ozono (µg/m³)</string>
-    <string name="co_title_with_unit">Monóxido de Carbono (µg/m³)</string>
-    <string name="so2_title_with_unit">Dióxido de azufre µg/m³</string>
+    <string name="um003_title_with_unit">UM003</string>
+    <string name="pm1_title_with_unit" translatable="false">PM1</string>
+    <string name="pm10_title_with_unit" translatable="false">PM10</string>
+    <string name="relative_humidity_title_with_unit">Humedad relativa</string>
+    <string name="temperature_with_unit">Temperatura</string>
+    <string name="pm25_title_with_unit" translatable="false">PM25</string>
+    <string name="no2_title_with_unit">Dióxio de nitrógeno</string>
+    <string name="nox_title_with_unit">Óxidos de nitrógeno</string>
+    <string name="no_title_with_unit">Monóxido de nitrógeno</string>
+    <string name="o3_title_with_unit">Ozono</string>
+    <string name="co_title_with_unit">Monóxido de Carbono</string>
+    <string name="so2_title_with_unit">Dióxido de azufre</string>
     <string name="gas_particles_information">-- Información de gases y partículas --</string>
     <string name="see_historic_7_days">Ver historico de los últimos 7 días</string>
     <string name="parameters">Parámetros</string>
@@ -44,5 +44,7 @@
     <string name="open_settings">Abrir Ajustes</string>
     <string name="settings_text" translatable="false">Necesitas habilitar el permiso de ubicación en los ajustes para obtener datos de tu localización.</string>
     <string name="settings_title" translatable="false">Permiso de ubicación necesario</string>
+    <string name="value_text">Valor:</string>
+    <string name="info_about">Información sobre</string>
 
 </resources>
