--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -5,7 +5,7 @@
     <!--Descriptions-->
     <string name="pm25_title">PM2.5 (Fine Particulate Matter):</string>
     <string name="pm25_description"> PM2.5 particles are small solid or liquid particles with a diameter of 2.5 microns or less. These particles are small enough to penetrate deeply into the lungs and can have serious health effects, especially for people with respiratory problems.</string>
-    <string name="pm10_title">PM10 (Coarser Particulate Matter):</string>
+    <string name="pm10_title">PM10 (Particulate Matter):</string>
     <string name="pm10_description"> Similar to PM2.5 but with a size of up to 10 microns. Although they are not as small as PM2.5, they can still cause respiratory issues when inhaled.</string>
     <string name="ozone_title">O₃ (Tropospheric Ozone):</string>
     <string name="ozone_description"> Tropospheric ozone is a pollutant formed when nitrogen oxides (NOₓ) and volatile organic compounds (VOCs) react in the presence of sunlight. It can cause respiratory problems and affect vegetation.</string>
@@ -21,15 +21,15 @@
     <string name="no_description"> This colorless and odorless gas is a pollutant primarily formed from the burning of fossil fuels. While in small amounts it can play a role in regulating blood flow and blood pressure, in high concentrations it is toxic and can cause irritation in the eyes, nose, and throat, as well as respiratory problems. Additionally, nitric oxide can react in the atmosphere to form nitrogen dioxide (NO₂), a more harmful pollutant.</string>
     <string name="not_found_location">Location not found</string>
 
-    <string name="um003_title_with_unit">UM003 (particles/cm³)</string>
-    <string name="relative_humidity_title_with_unit">Relative Humidity (%)</string>
-    <string name="temperature_with_unit">Temperature (ºC)</string>
-    <string name="no2_title_with_unit">Nitrogen Dioxide (µg/m³)</string>
-    <string name="nox_title_with_unit">Nitrogen Oxides (µg/m³)</string>
-    <string name="no_title_with_unit">Nitric Oxide (µg/m³)</string>
-    <string name="o3_title_with_unit">Ozone (µg/m³)</string>
-    <string name="co_title_with_unit">Carbon Monoxide (µg/m³)</string>
-    <string name="so2_title_with_unit">Sulfur Dioxide µg/m³</string>
+    <string name="um003_title_with_unit">UM003</string>
+    <string name="relative_humidity_title_with_unit">Relative Humidity</string>
+    <string name="temperature_with_unit">Temperature</string>
+    <string name="no2_title_with_unit">Nitrogen Dioxide</string>
+    <string name="nox_title_with_unit">Nitrogen Oxides</string>
+    <string name="no_title_with_unit">Nitric Oxide</string>
+    <string name="o3_title_with_unit">Ozone</string>
+    <string name="co_title_with_unit">Carbon Monoxide</string>
+    <string name="so2_title_with_unit">Sulfur Dioxide</string>
     <string name="gas_particles_information">-- Gas and Particles Information --</string>
     <string name="see_historic_7_days">View history of the last 7 days</string>
     <string name="parameters">Parameters</string>
@@ -40,4 +40,6 @@
     <string name="parameter">Parameter: </string>
     <string name="average">, Average: </string>
     <string name="open_settings">Abrir Ajustes</string>
+    <string name="value_text">Value:</string>
+    <string name="info_about">Info about</string>
 </resources>
