--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -37,7 +37,7 @@
     <string name="moderate_text">51–100: Moderate</string>
     <string name="unhealthy_sensible_text">101–150: Unhealthy for sensitive groups</string>
     <string name="unhealthy_text">151–200: Unhealthy</string>
-    <string name="very_unhealthy_text">201-300: Very unhealthy</string>
+    <string name="very_unhealthy_text">201–300: Very unhealthy</string>
     <string name="hazardous_text">300+: Hazardous</string>
     <string name="ok_text">OK</string>
     <string name="warning_title">Warning</string>
